# soccer_results_scraper

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
scraper/: __init__.py
scraper/main/: routes.py
