[tool.poetry]
name = "soccer-results-scraper"
version = "0.1.0"
description = "A soccer results scraper using Flask"
authors = ["Mirko Torrisi"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
blinker = "*"
click = "*"
entrypoints = "*"
flask = "*"
gunicorn = "*"
itsdangerous = "*"
werkzeug = "*"
requests = "*"
beautifulsoup4 = "*"
jinja2 = "*"
gevent = "*"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
mccabe = "*"
pycodestyle = "*"
pycparser = "*"
pyflakes = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
